// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SearchInput ui with icon 1`] = `
<InputGroup
  tag="div"
>
  <InputGroupAddon
    addonType="prepend"
    tag="div"
  >
    <Icon
      icon="search"
    />
  </InputGroupAddon>
  <Input
    defaultValue=""
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</InputGroup>
`;

exports[`Component: SearchInput ui with icon when undefined 1`] = `
<InputGroup
  tag="div"
>
  <InputGroupAddon
    addonType="prepend"
    tag="div"
  >
    <Icon
      icon="search"
    />
  </InputGroupAddon>
  <Input
    defaultValue=""
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</InputGroup>
`;

exports[`Component: SearchInput ui without icon 1`] = `
<Input
  defaultValue=""
  onChange={[Function]}
  onKeyUp={[Function]}
  type="text"
/>
`;
